# projet-rust

./: .gitignore  Cargo.toml  README.md  result.ppm  test.ppm  test.py
benches/: benchmark.rs  example.rs
src/: image.rs  lib.rs  pixel.rs
