[package]
name = "big_project"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencher = "0.1.5"

[[bench]]
name = "example"
harness = false

[lib]
name = "big_project"
crate-type = ["rlib", "dylib"]
